# nc2cog

./: .gitignore  CHANGELOG.md  INSTALLATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_zh.md  USAGE_EXAMPLE.md  analyze_overviews.py  demo_overview_levels.py  demo_resampling.py  explain_overviews.py  pyproject.toml  requirements.txt  setup.py  test_cli_params.py  test_cog_fix.py  test_gdal_handling.py  test_gdal_options.py
config/: config_with_projection.yaml  default_config.yaml
docs/: completion_summary.md  configuration_guide.md  examples.md  gdal_optimization.md  project_structure.md  projection_feature_usage.md  troubleshooting.md  user_guide.md  user_manual.md
docs/superpowers/plans/: 2026-05-25-cog-metadata-impl.md  2026-05-26-cog-metadata-timing-refactor.md  2026-05-26-pypi-publish.md  2026-06-27-fix-4d-netcdf-support.md
docs/superpowers/specs/: 2026-04-14-projection-parameter-design.md  2026-05-07-nc-multidimensional-support-design.md  2026-05-25-cog-metadata-design.md  2026-05-26-pypi-publish-design.md  2026-06-27-fix-4d-netcdf-support-design.md
src/nc2cog/: __init__.py  __version__.py  analyzer.py  cli.py  config.py  discovery.py  errors.py  logger.py  metadata.py  processor.py
src/nc2cog/config/: default_config.yaml
tests/: test_cli_params.py  test_config.py  test_config_projection.py  test_discovery.py  test_extended_cli.py  test_gdal_warnings_fix.py  test_metadata.py  test_projection.py
tests/data/: create_test_nc.py  sample.nc
