[project]
name = "nc2cog"
version = "0.1.4"
description = "Convert netCDF files to Cloud-Optimized GeoTIFF format with advanced compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sam Chen"}
]
keywords = ["netcdf", "cog", "geotiff", "gdal", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "GDAL>=3.8.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "netCDF4>=1.6.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/cyberpsyche/nc2cog"
Repository = "https://github.com/cyberpsyche/nc2cog"

[project.scripts]
nc2cog = "nc2cog.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nc2cog = ["config/*.yaml"]
